2008-12-26  Dmitry Dulepov  <dmitry@typo3.org>

	* Removed ext_php_api.dat
	* Fixed bug #10020: Allow DS and TOs outside of GRSP

2008-12-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Require PHP 5.1 from now on
	* Fixed bug #9985: Simplify template object selection for pages and FCE

2008-12-12	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #9564: Update PHP dependencies
	* Fixed bug #9519: Feature: enable drag&drop in page module  (original code by Nikolas Hagelstein from nh_tvdragndrop, adaptation by Steffen Kamper, optimisation by Dmitry Dulepov)
	* Fixed bug #9930: TemplaVoila sites do not work in TYPO3 4.3
	* Fixed bug #9510: Enhancement of "save to" select (thanks to Steffen Kamper)
	* Fixed bug #9430: "Switch to list view"-link use absolute url

2008-08-21	Dmitry Dulepov	<dmitry@typo3.org>

	* Added icon for FCE content element

2008-08-13	Dmitry Dulepov	<dmitry@typo3.org>

	* Changed the order of header parts - now they appear as the first member of page.headerData
	* Fixed bug #4703: On-page links gets prefixed with path to template
	* Fixed bug #9118: Copy Icon not enabled if the user has no edit-rights
	* Fixed bug #8858: TV does not honour TCAdefaults. from PageTSconfig
	* Added header palette
	* Fixed bug #4823: Remove 'Templavoila' - item in Click Menu of Filelist for editors
	* Changed lockType to Local
	* Release of version 1.3.7

2008-05-12	Dmitry Dulepov	<dmitry@typo3.org>

	* RFC #8338: "Catchable fatal error" still exists

	RELEASE OF TEMPLAVOILA 1.3.5

2008-04-13	Dmitry Dulepov	<dmitry@typo3.org>

	* Added ability to hide FCE

2008-02-25	Dmitry Dulepov	<dmitry@typo3.org>

	RELEASE OF TEMPLAVOILA 1.3.4

~ Cleanup, added @var in pi1
# Fixed bug #7644: Mapping in gets lost in different ways everytime you enter the mapping interface
~ Small adjustments after #6648
~ Added some XCLASS definitions to make EM happy

2008-02-04  Dmitry Dulepov  <dmitry@typo3.org>

# Fixed catchable error in t3lib_div with TYPO3 4.2
